--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/main.ts",
+    "setup_db": "tsx src/syncdb.ts",
+    "build": "tsc",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -13,8 +16,15 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "sequelize": "^6.37.3",
+    "source-map-loader": "^5.0.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "tsx": "^4.18.0",
+    "typescript": "^5.5.4"
+  }
 }
