--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "faketacobot",
   "version": "1.0.0",
   "description": "",
+  "author": "",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/main.ts",
     "setup_db": "tsx src/syncdb.ts",
     "build": "tsc",
-    "start": "node ."
+    "start": "node .",
+    "prepare": "husky",
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "prettier --write",
+      "eslint"
+    ]
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.15.3",
@@ -22,8 +30,15 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2"
   },
-  "type": "module",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
     "tsx": "^4.18.0",
     "typescript": "^5.5.4"
   }
